feat(kvcounter): update branding to Cosmonic
Signed-off-by: Brooks Townsend <brooks@cosmonic.com>

--- a/kvcounter/rust/ui/public/index.html
+++ b/kvcounter/rust/ui/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>KVCounter - wasmCloud</title>
+    <title>KVCounter - Cosmonic</title>
   </head>
 
   <body class="flex flex-col h-screen overflow-y-auto">
